[package]
name = "xint"
version = "2026.2.18"
edition = "2021"
description = "X Intelligence CLI — search, analyze, and engage on X/Twitter from the terminal"
license = "MIT"
repository = "https://github.com/0xNyk/xint-rs"
authors = ["Nyk"]
keywords = ["twitter", "x", "cli", "osint", "intelligence"]

[[bin]]
name = "xint"
path = "src/main.rs"

[dependencies]
tokio = { version = "2026.2.18"] }
reqwest = { version = "2026.2.18"], default-features = false }
clap = { version = "2026.2.18"] }
serde = { version = "2026.2.18"] }
serde_json = "1"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
rand = "0.8"
getrandom = "0.3"
csv = "1"
dotenvy = "0.15"
colored = "2"
chrono = { version = "2026.2.18"] }
ctrlc = "3"
anyhow = "1"
thiserror = "2"
url = "2"
glob = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
