[project]
name = "wiim-cli"
version = "0.1.1"
description = "CLI tool for controlling WiiM devices on your local network"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.9.0",
    "pywiim>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
wiim = "wiim_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
